--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="container">
             <!-- LOGO -->
             <a class="navbar-brand logo" href="index.html">
-                    Kalvin
+                    Akash
                 </a>
 
             <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -100,14 +100,14 @@
     <section id="home" class="banner banner-centered" style="background-image: url('images/background/creative2-banner-bg.jpg')" data-stellar-background-ratio=".7" data-scroll-index="0">
         <!--Banner Content-->
         <div class="banner-caption">
-            <h1>Hi! I'm Kalvin.</h1>
+            <h1>Hi! I'm Akash.</h1>
             <p class="cd-headline clip mt-30">
-                <span>Creative Designer & Developer located in New York.</span><br>
+                <span>Full Stack Developer located in Bhubaneswar.</span><br>
                 <span class="blc">Specialized in</span>
                 <span class="cd-words-wrapper">
                             <b class="is-visible">Creating Websites.</b>
-                            <b>Designing Logo.</b>
-                            <b>Designing UI/UX.</b>
+                            <b>Java and Spring Boot.</b>
+                            <b>.NET WebAPIs.</b>
                         </span>
             </p>
         </div>
@@ -136,9 +136,9 @@
                     <div class="about-content">
                         <div class="about-heading">
                             <h2>About Me.</h2>
-                            <span>UI/UX Designer & Web Developer</span>
+                            <span>Full stack & Web Developer</span>
                         </div>
-                        <p>I'm <b>Kalvin Doe</b> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled
+                        <p>I'm <b>Akash Kumar Sethy</b> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled
                             it to specimen book.</p>
                         <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed
                             to using 'Content here, content here', making it look like readable English.</p>
