--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     </section>
     <!--About Section End-->
 
-    <!--Services Section Start-->
+<!--     <!--Services Section Start-->
     <section class="services bg-gray pt-100 pb-50" data-scroll-index="2">
         <div class="container">
             <div class="row">
@@ -555,7 +555,7 @@
             </div>
         </div>
     </section>
-    <!--Testimonials Section End-->
+    <!--Testimonials Section End--> -->
 
     <!--Contact Section Start-->
     <section class="contact pt-100 pb-100" data-scroll-index="5">
