--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="keywords" content="Personal, Portfolio, Creative">
-    <meta name="description" content="Kalvin Portfolio Template">
+    <meta name="description" content="Akash - Portfolio">
     <meta name="author" content="cosmos-themes">
 
-    <title>Kalvin - Portfolio Template</title>
+    <title>Akash - Portfolio</title>
 
     <!-- favicon -->
     <link href="images/favicon.ico" rel="icon" type="image/png">
@@ -81,12 +81,12 @@
                     <li class="nav-item">
                         <a href="#" class="nav-link" data-scroll-nav="2">Services</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a href="#" class="nav-link" data-scroll-nav="3">Works</a>
                     </li>
                     <li class="nav-item">
                         <a href="#" class="nav-link" data-scroll-nav="4">Blog</a>
-                    </li>
+                    </li> -->
                     <li class="nav-item">
                         <a href="#" class="nav-link" data-scroll-nav="5">Contact</a>
                     </li>
@@ -102,12 +102,13 @@
         <div class="banner-caption">
             <h1>Hi! I'm Akash.</h1>
             <p class="cd-headline clip mt-30">
-                <span>Full Stack Developer located in Bhubaneswar.</span><br>
+                <span>Full Stack Developer located in Mumbai.</span><br>
                 <span class="blc">Specialized in</span>
                 <span class="cd-words-wrapper">
                             <b class="is-visible">Creating Websites.</b>
                             <b>Java and Spring Boot.</b>
                             <b>.NET WebAPIs.</b>
+                            <b>Angular 13</b>
                         </span>
             </p>
         </div>
@@ -138,20 +139,18 @@
                             <h2>About Me.</h2>
                             <span>Full stack & Web Developer</span>
                         </div>
-                        <p>I'm <b>Akash Kumar Sethy</b> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled
-                            it to specimen book.</p>
-                        <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed
-                            to using 'Content here, content here', making it look like readable English.</p>
+                        <p>I'm <b>Akash Kumar Sethy</b> Working as a Software Engineer at Capgemini. Post Graduate Diploma in Software Development with Full Stack Development from IIIT Banglore.</p>
+                        <p>1 year of Expirence and worked on several WebAPIs and WebApp Development. Comfortable with Java, ASP .NET Core And Frontend development using Angular. Worked with several Databses like Microsoft SQL, MySQL, PostgreSQL etc.</p>
                         <!--About Social Icons-->
                         <div class="social-icons">
-                            <a href="#"><i class="fa fa-facebook"></i></a>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-dribbble"></i></a>
-                            <a href="#"><i class="fa fa-google-plus"></i></a>
-                            <a href="#"><i class="fa fa-pinterest"></i></a>
+                            <a href="https://github.com/akashkumarsethy"><i class="fa fa-github"></i></a>
+                            <a href="https://www.linkedin.com/in/akash-kumar-sethy-a1b9ba14a/"><i class="fa fa-linkedin-square"></i></a>
+                            <a href="https://www.facebook.com/akashkumar.axel/"><i class="fa fa-facebook"></i></a>
+                            <a href="https://www.instagram.com/akash_kumar47/"><i class="fa fa-instagram"></i></a>
+                            <a href="https://twitter.com/aakashsethy47"><i class="fa fa-twitter"></i></a>
                         </div>
                         <span class="about-button">
-                                <a class="main-btn" href="#">Download CV</a>
+                                <a class="main-btn" href="https://docs.google.com/document/d/1ySXO2KlMU-YEtnBAi3Zkmxwzy8nWQMCA6HM6U_l3rrQ/edit?usp=sharing">Download CV</a>
                             </span>
                     </div>
                 </div>
@@ -160,7 +159,7 @@
     </section>
     <!--About Section End-->
 
-<!--     <!--Services Section Start-->
+    <!-- Services Section Start-->
     <section class="services bg-gray pt-100 pb-50" data-scroll-index="2">
         <div class="container">
             <div class="row">
@@ -172,16 +171,15 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-4">
-                    <!--Service Item-->
+                <!-- <div class="col-md-4">
                     <div class="service-item">
                         <span class="icon">
                                 <i class="fa fa-laptop"></i>
                             </span>
                         <h4>Web Design</h4>
-                        <p>Lorem Ipsum is simply dummy text of the Lorem has been the industry's standard dummy text ever.</p>
+                        <p></p>
                     </div>
-                </div>
+                </div> -->
                 <div class="col-md-4">
                     <!--Service Item-->
                     <div class="service-item">
@@ -189,47 +187,45 @@
                                 <i class="fa fa-gears"></i>
                             </span>
                         <h4>Web Development</h4>
-                        <p>Lorem Ipsum is simply dummy text of the Lorem has been the industry's standard dummy text ever.</p>
+                        <p></p>
                     </div>
                 </div>
-                <div class="col-md-4">
-                    <!--Service Item-->
+                <!-- <div class="col-md-4">
                     <div class="service-item">
                         <span class="icon">
                                 <i class="fa fa-mobile"></i>
                             </span>
                         <h4>Responsive Design</h4>
-                        <p>Lorem Ipsum is simply dummy text of the Lorem has been the industry's standard dummy text ever.</p>
+                        <p></p>
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <!--Service Item-->
                     <div class="service-item">
                         <span class="icon">
                                 <i class="fa fa-rocket"></i>
                             </span>
                         <h4>Branding Identity</h4>
-                        <p>Lorem Ipsum is simply dummy text of the Lorem has been the industry's standard dummy text ever.</p>
+                        <p></p>
+                    </div>
+                </div> -->
+                <div class="col-md-4">
+                    <!--Service Item-->
+                    <div class="service-item">
+                        <span class="icon">
+                                <i class="fa fa-cloud"></i>
+                            </span>
+                        <h4>Cloud Deployment</h4>
+                        <p></p>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <!--Service Item-->
                     <div class="service-item">
                         <span class="icon">
-                                <i class="fa fa-pencil"></i>
+                                <i class="fa fa-tasks"></i>
                             </span>
-                        <h4>Creative Design</h4>
-                        <p>Lorem Ipsum is simply dummy text of the Lorem has been the industry's standard dummy text ever.</p>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <!--Service Item-->
-                    <div class="service-item">
-                        <span class="icon">
-                                <i class="fa fa-support"></i>
-                            </span>
-                        <h4>Support</h4>
-                        <p>Lorem Ipsum is simply dummy text of the Lorem has been the industry's standard dummy text ever.</p>
+                        <h4>DevOps</h4>
+                        <p></p>
                     </div>
                 </div>
             </div>
@@ -238,11 +234,10 @@
     <!--Services Section End-->
 
     <!--Stats Section Start-->
-    <section class="stats pt-100 pb-100" style="background-image: url('images/background/stats-bg.jpg')">
+    <!-- <section class="stats pt-100 pb-100" style="background-image: url('images/background/stats-bg.jpg')">
         <div class="container">
             <div class="row">
                 <div class="col-lg-3 col-md-6">
-                    <!--Stats Item-->
                     <div class="single-stat">
                         <span class="stat-icon">
                                 <i class="fa fa-users" aria-hidden="true"></i>
@@ -252,7 +247,7 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
-                    <!--Stats Item-->
+
                     <div class="single-stat">
                         <span class="stat-icon">
                                 <i class="fa fa-thumbs-up" aria-hidden="true"></i>
@@ -262,7 +257,7 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
-                    <!--Stats Item-->
+
                     <div class="single-stat">
                         <span class="stat-icon">
                                 <i class="fa fa-edit" aria-hidden="true"></i>
@@ -272,7 +267,7 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
-                    <!--Stats Item-->
+
                     <div class="single-stat">
                         <span class="stat-icon">
                                 <i class="fa fa-trophy" aria-hidden="true"></i>
@@ -283,12 +278,12 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!--Stats Section End-->
 
 
     <!--Portfolio Section Start-->
-    <section class="portfolio pt-100 pb-70" data-scroll-index="3">
+    <!-- <section class="portfolio pt-100 pb-70" data-scroll-index="3">
         <div class="container">
             <div class="row">
                 <div class="col">
@@ -307,7 +302,6 @@
                 </div>
             </div>
             <div class="row portfolio-items">
-                <!--Portfolio Item-->
                 <div class="col-lg-4 col-md-6 item application">
                     <div class="item-content">
                         <img src="images/portfolio/img-1.jpg" alt="">
@@ -323,7 +317,6 @@
                         </div>
                     </div>
                 </div>
-                <!--Portfolio Item-->
                 <div class="col-lg-4 col-md-6 item design">
                     <div class="item-content">
                         <img src="images/portfolio/img-2.jpg" alt="">
@@ -339,7 +332,6 @@
                         </div>
                     </div>
                 </div>
-                <!--Portfolio Item-->
                 <div class="col-lg-4 col-md-6 item development">
                     <div class="item-content">
                         <img src="images/portfolio/img-3.jpg" alt="">
@@ -355,7 +347,6 @@
                         </div>
                     </div>
                 </div>
-                <!--Portfolio Item-->
                 <div class="col-lg-4 col-md-6 item design development">
                     <div class="item-content">
                         <img src="images/portfolio/img-4.jpg" alt="">
@@ -371,7 +362,6 @@
                         </div>
                     </div>
                 </div>
-                <!--Portfolio Item-->
                 <div class="col-lg-4 col-md-6 item development application">
                     <div class="item-content">
                         <img src="images/portfolio/img-5.jpg" alt="">
@@ -387,7 +377,6 @@
                         </div>
                     </div>
                 </div>
-                <!--Portfolio Item-->
                 <div class="col-lg-4 col-md-6 item application development">
                     <div class="item-content">
                         <img src="images/portfolio/img-6.jpg" alt="">
@@ -405,11 +394,11 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!--Portfolio Section End-->
 
     <!--Blog Section Start-->
-    <section class="blogs pt-100 pb-100 bg-gray" data-scroll-index="4">
+    <!--<section class="blogs pt-100 pb-100 bg-gray" data-scroll-index="4">
         <div class="container">
             <div class="row">
                 <div class="col text-center">
@@ -421,7 +410,6 @@
             </div>
             <div class="row">
                 <div class="owl-carousel owl-theme">
-                    <!--Blogs Item-->
                     <div class="blog-item">
                         <div class="blog-img">
                             <a href="single-blog.html">
@@ -441,7 +429,7 @@
                             </div>
                         </div>
                     </div>
-                    <!--Blogs Item-->
+
                     <div class="blog-item">
                         <div class="blog-img">
                             <a href="single-blog.html">
@@ -461,7 +449,6 @@
                             </div>
                         </div>
                     </div>
-                    <!--Blogs Item-->
                     <div class="blog-item">
                         <div class="blog-img">
                             <a href="single-blog.html">
@@ -481,7 +468,6 @@
                             </div>
                         </div>
                     </div>
-                    <!--Blogs Item-->
                     <div class="blog-item">
                         <div class="blog-img">
                             <a href="single-blog.html">
@@ -511,16 +497,15 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section>-->
     <!--Blog Section End-->
 
     <!--Testimonials Section Start-->
-    <section class="testimonials pt-100 pb-100" style="background-image: url('images/background/testimonials-bg.jpg')">
+    <!--<section class="testimonials pt-100 pb-100" style="background-image: url('images/background/testimonials-bg.jpg')">
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 offset-lg-1">
                     <div class="owl-carousel owl-theme text-center">
-                        <!--Testimonials Item-->
                         <div class="testimonial-item">
                             <div class="author-img">
                                 <img src="images/testimonial/img-1.jpg" alt="">
@@ -530,7 +515,7 @@
                             <p>Dolor facilis veritatis doloremque dicta eos Voluptate earum nulla ad et esse Saepe asperiores nisi facere ipsam corporis. Dolorem praesentium tenetur tempore dolorem illum autem? Veritatis fuga quasi sunt tenetur. Expedita
                                 id eaque incidunt beatae nesciunt! In similique exercitationem tempore excepturi placeat Nostrum ducimus dicta temporibus quas!</p>
                         </div>
-                        <!--Testimonials Item-->
+
                         <div class="testimonial-item">
                             <div class="author-img">
                                 <img src="images/testimonial/img-1.jpg" alt="">
@@ -540,7 +525,6 @@
                             <p>Dolor facilis veritatis doloremque dicta eos Voluptate earum nulla ad et esse Saepe asperiores nisi facere ipsam corporis. Dolorem praesentium tenetur tempore dolorem illum autem? Veritatis fuga quasi sunt tenetur. Expedita
                                 id eaque incidunt beatae nesciunt! In similique exercitationem tempore excepturi placeat Nostrum ducimus dicta temporibus quas!</p>
                         </div>
-                        <!--Testimonials Item-->
                         <div class="testimonial-item">
                             <div class="author-img">
                                 <img src="images/testimonial/img-1.jpg" alt="">
@@ -554,8 +538,8 @@
                 </div>
             </div>
         </div>
-    </section>
-    <!--Testimonials Section End--> -->
+    </section>-->
+    <!--Testimonials Section End-->
 
     <!--Contact Section Start-->
     <section class="contact pt-100 pb-100" data-scroll-index="5">
@@ -597,7 +581,7 @@
             </div>
         </div>
     </section>
-    <!--Contact Section End-->
+    <!--Contact Section End -->
 
     <!--Footer Start-->
     <footer class="pt-50 pb-50">
@@ -606,7 +590,7 @@
                 <div class="col-md-3 col-sm-6">
                     <!--Contant Item-->
                     <div class="contact-info">
-                        <h5>Kalvin</h5>
+                        <h5>Akash</h5>
                         <p>lorem Ipsum donor sit.</p>
                     </div>
                 </div>
@@ -614,21 +598,21 @@
                     <!--Contant Item-->
                     <div class="contact-info">
                         <h5>Phone No.</h5>
-                        <p>(+1) 123 456 7890</p>
+                        <p>(+91) 7978025340</p>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6">
                     <!--Contant Item-->
                     <div class="contact-info">
                         <h5>Email</h5>
-                        <p>info@example.com</p>
+                        <p>aakashsethy@gmail.com</p>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6">
                     <!--Contant Item-->
                     <div class="contact-info">
                         <h5>Address</h5>
-                        <p>123 lorem ipsum New York, USA.</p>
+                        <p>Mumbai, Maharastra.</p>
                     </div>
                 </div>
             </div>
@@ -636,7 +620,7 @@
                 <div class="col-md-12">
                     <hr>
                     <p class="copy pt-30">
-                        Kalvin &copy; 2021. All Right Reserved, Designed By Cosmos-Themes.
+                        Akash &copy; 2022. All Right Reserved, Designed By Akash.
                     </p>
                 </div>
             </div>
