--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@
                     <!--Contant Item-->
                     <div class="contact-info">
                         <h5>Akash</h5>
-                        <p>lorem Ipsum donor sit.</p>
+                        <p>Full Stack Developer</p>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6">
