--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                             <a href="https://github.com/akashkumarsethy"><i class="fa fa-github"></i></a>
                             <a href="https://www.linkedin.com/in/akash-kumar-sethy-a1b9ba14a/"><i class="fa fa-linkedin-square"></i></a>
                             <a href="https://www.facebook.com/akashkumar.axel/"><i class="fa fa-facebook"></i></a>
-                            <a href="https://www.instagram.com/akash_kumar47/"><i class="fa fa-instagram"></i></a>
+                            <a href="https://www.instagram.com/d.akash_7/"><i class="fa fa-instagram"></i></a>
                             <a href="https://twitter.com/aakashsethy47"><i class="fa fa-twitter"></i></a>
                         </div>
                         <span class="about-button">
