--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                             <h2>About Me.</h2>
                             <span>Full stack & Web Developer</span>
                         </div>
-                        <p>I'm <b>Akash Kumar Sethy</b> Working as a Software Engineer at Capgemini. Post Graduate Diploma in Software Development with Full Stack Development from IIIT Banglore.</p>
+                        <p>I'm <b>Akash Kumar Sethy</b> Working as a Senior Software Engineer at Capgemini. Post Graduate Diploma in Software Development with Full Stack Development from IIIT Banglore.</p>
                         <p>1 year of Expirence and worked on several WebAPIs and WebApp Development. Comfortable with Java, ASP .NET Core And Frontend development using Angular. Worked with several Databses like Microsoft SQL, MySQL, PostgreSQL etc.</p>
                         <!--About Social Icons-->
                         <div class="social-icons">
@@ -620,7 +620,7 @@
                 <div class="col-md-12">
                     <hr>
                     <p class="copy pt-30">
-                        Akash &copy; 2022. All Right Reserved, Designed By Akash.
+                        Akash &copy; 2024. All Right Reserved, Designed By Akash.
                     </p>
                 </div>
             </div>
